app-design-v2/src/App.css
/* ... */
/* BUTTON STYLES AND SHAPES */
/* Activate button */
.activated > p {
    color: var(--green-100);
}
.button.activated:hover {
    background-color: var(--green-900);
}

/* Primary fullwidth button */
.primary {
  background-color: var(--red-500);
}

.primary:hover {
  background-color: var(--red-800);
}

.full-width {
  min-width: 100%;
}

/* Primary fullwidth button */
.secondary {
  background-color: var(--gray-500);
}

.secondary:hover {
  background-color: var(--gray-600);
}

/* card button */
.button.card {
  width: 100px;
  height: 116px;
  transition: background-color var(--speed-1) ease-in-out;
}

.button.sm:after {
  /* right side icon setup*/
  width: 16px;
  height: 16px;
}

.button.sm.externallink:after {
  content: var(--externallink-icon);
}

.button.sm.dropdown:after {
  content: var(--dropdown-icon);
}

.button.sm {
  padding: 4px 6px;
  max-height: 25px;
  width: auto;
  /* to fit its content */
  max-width: max-content;
  /* to fit its content */
  transition: background-color var(--speed-1) ease-in-out;
}

.button.sm:not(.primary, .secondary, .activated):hover {
  background-color: var(--gray-600);
  transition: background-color var(--speed-1) ease-in-out;
}

.button:not(
    p,
    .button.checkbox,
    button.text-sm,
    input,
    button.active,
    .toggle-button
  ):active {
  transform: scale(96%);
}
/* video tiles */
.video-tile {
    flex: 1 1 200px;
 
    height: auto;
    aspect-ratio: 1 / 1;
    }
.video-tile.size-1 {
   min-width: 300px
}
.video-tile.empty:before {
    content: var(--camera-icon);
    margin: 8px;
    display: block;
}
.video-tile.empty {
    border: 1.5px dashed var(--gray-500);

    background: transparent;
}
/* segmented-control design */
.segmented-control-container {
  max-width: max-content;
}

.segmented-control-button {
  /* global size */
  min-width: 104px;
  /* min-height: 22px; */
  transition: color var(--speed-1) ease-in-out;
}

.segmented-control-button > p.text.md {
  /* medium size */
  min-height: 25px;
}

.segmented-control-button > p.text.sm {
  /* small size */
  min-height: 22px;
}

.segmented-control-button:hover > p {
  color: var(--gray-100);
  transition: color var(--speed-1) ease-in-out;
}

/* typepography */

.title,
h1 {
  font-size: 13px;
  font-weight: 600;
  line-height: 14px;
  /* letter-spacing: -0.43px; */
}

.text.bg {
  font-size: 12px;
  font-weight: 600;
  line-height: 17px;
  letter-spacing: -0.43px;
}

.text.bg-md {
  font-size: 12px;
  font-weight: 400;
  line-height: 15px;
  letter-spacing: -0.43px;
}

.text.md {
  font-size: 12px;
  font-weight: 500;
  line-height: 14px;
  /* letter-spacing: -0.43px; */
}

.text.sm {
  font-size: 11px;
  font-weight: 500;
  line-height: 14px;
  /* letter-spacing: -0.43px; */
}

/* text colors */
/* .color-gray-400 {
  color: var(--gray-400);
}
.color-gray-100 {
  color: var(--gray-100);
} */

/* =========================
   UTILITIES (Tailwind-like)
   ========================= */
.overflow-hidden {
  overflow: hidden;
}

.overflow-y {
  overflow-y: auto;
}

.overflow-x {
  overflow-x: auto;
}

/* ==========================
   Global Scrollbar Styling
   Applies to all scrollbars
   ========================== */

/* Track: the background of the scrollbar */
::-webkit-scrollbar-track {
  border-radius: 10px;
  /* Rounded corners for the track */
  background-color: transparent;
  /* Change to any color you want */
}

/* Scrollbar: the actual scrollbar container */
::-webkit-scrollbar {
  width: calc(12px - 4px);
  /* Width of the vertical scrollbar */
  height: 12px;
  /* Height of the horizontal scrollbar */
  background-color: transparent;
  /* Background color behind the thumb */
}

/* Thumb: the draggable part of the scrollbar */
::-webkit-scrollbar-thumb {
  border-radius: 99px;
  /* Fully rounded thumb */
  background-color: var(--gray-600);
  /* Default thumb color */
  cursor: grab;
  /* Cursor when hovering over thumb */
  border: 2px solid var(--gray-700);
  /* Padding/border around thumb, match scrollbar background */
}

/* Thumb hover state: when mouse is over the thumb */
::-webkit-scrollbar-thumb:hover {
  background-color: var(--gray-700);
  /* Change thumb color on hover */
}

/* Thumb active state: when mouse is clicking/dragging the thumb */
::-webkit-scrollbar-thumb:active {
  background-color: var(--gray-800);
  /* Change thumb color when active */
  cursor: grabbing;
  /* Cursor changes when dragging */
}

a,
a.link {
  text-decoration: underline;
  text-underline-offset: 3px;
  color: inherit;
  transition: filter var(--speed-1) ease-in-out;
}

a:hover,
a.link:hover {
  filter: brightness(0.8);
  transition: filter var(--speed-1) ease-in-out;
}

a:after {
  content: var(--externallink-icon);
  display: inline-block;
  position: absolute;
  margin-left: 2px;
}

/* z-index */
.z-1 {
  z-index: 1;
}

.z-2 {
  z-index: 2;
}

.z-3 {
  z-index: 3;
}

.z-4 {
  z-index: 4;
}

.z-5 {
  z-index: 5;
}

.z-6 {
  z-index: 6;
}

.z-7 {
  z-index: 7;
}

.z-8 {
  z-index: 8;
}

.z-9 {
  z-index: 9;
}

.z-10 {
  z-index: 10;
}

/* positions */
.pos-abs {
  position: absolute;
}

.pos-rel {
  position: relative;
}

.pos-sticky {
  position: sticky;
}

/* positions */
.top-0 {
  top: 0;
}

.left-0 {
  left: 0;
}

.right-0 {
  right: 0;
}

.bottom-0 {
  bottom: 0;
}

.inset-0 {
  inset: 0;
}

/* display / flex */
.flex {
  display: flex;
}

.flex-inline {
  display: inline-flex;
}

.flex-row {
  flex-direction: row;
}

.flex-col {
  flex-direction: column;
}
.flex-wrap {
  flex-wrap: wrap;
}
.items-center {
  align-items: center;
}

.justify-center {
  justify-content: center;
}
.flex-start {
  align-items: flex-start;
}

.align-end {
  align-items: flex-end;
}

.justify-content-space-between {
  justify-content: space-between;
}

.align-items-end {
  align-items: flex-end;
}

/* flex (proportions) */
.flex-1 {
  flex: 1;
}

.flex-2 {
  flex: 2;
}

.flex-3 {
  flex: 3;
}

.flex-4 {
  flex: 4;
}

.flex-5 {
  flex: 5;
}

.flex-6 {
  flex: 6;
}
/* ... */

